@@ -1,5 +1,6 @@
 1.0.21
 - Add ApplePay to cart page
+- Fix retrieving the Client's IP Address
 
 1.0.20
 - Update the plugin to the latest version of iFields 2.15.2401.3101
